[tool.poetry]
name = "airflow_lineage_extractor"
version = "0.1.0"
description = ""
authors = ["borjavb"]

[tool.poetry.dependencies]
python = "^3.9,<3.11"
networkx = "2.8.6"
graphviz = "^0.20.1"
tabulate = "==0.9.0"
dbt-artifacts-parser = "^0.2.3"

[tool.poetry.group.dev.dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
